src/objects/My_Formulary__c.object
<CustomObject>
    <fields>
        <fullName>Card_Image__c</fullName>
        <label>Card Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Coverage_End_Date__c</fullName>
        <label>Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coverage_Start_Date__c</fullName>
        <label>Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan__c</fullName>
        <label>Health Plan</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Name__c</fullName>
        <label>PCP Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Phone__c</fullName>
        <label>PCP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>My Formulary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insurance Provider</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Formularies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>